loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:13: error: not found: value isGroundwhite
} while(isGroundwhite()==true) 
        ^